# operations

./: .gitignore  pyproject.toml
operations/: __main__.py  main.py
operations/api/: auth.py
operations/api/v1/: __init__.py  auth.py  ss.py  tax.py  tax_calculator.py  users.py
operations/apps/auth/: dependencies.py  schemas.py  services.py
operations/apps/config/: models.py  schemas.py
operations/apps/ss/: models.py  schemas.py  services.py
operations/apps/tax/: models.py  schemas.py  services.py
operations/apps/taxes_calculator/: schemas.py  services.py
operations/apps/users/: models.py  schemas.py  services.py
operations/cli/users/: app.py  dependencies.py  options.py
operations/core/: auth.py  config.py  db.py  middlewares.py  schemas.py  utils.py  validators.py
operations/models/: config.py  ss.py  tax.py  taxes.py
operations/schemas/: _types.py  auth.py  common.py  query.py  ss.py  tax.py  user.py  wrapper.py
operations/services/: auth.py  ss.py  tax.py  users.py
